--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,10 @@
+:root {
+  --white: #e0e0e0;
+  --black: #161616;
+  --gray: #969696;
+  --red: #f0506e;
+}
+
 :root,
 textarea {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -5,8 +12,8 @@ textarea {
   line-height: 24px;
   font-weight: 400;
 
-  color: #e0e0e0;
-  background-color: #161616;
+  color: var(--white);
+  background-color: var(--black);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,8 +23,8 @@ textarea {
 }
 
 ::selection {
-  color: #161616;
-  background-color: #e0e0e0;
+  color: var(--black);
+  background-color: var(--white);
 }
 
 body {
