--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@ textarea {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 400;
+  font-weight: 500;
 
   color: var(--white);
   background-color: var(--black);
@@ -27,11 +27,18 @@ textarea {
   background-color: var(--gray);
 }
 
+html {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   padding: 0;
-  min-width: 100vw;
-  min-height: 100vh;
   overscroll-behavior-y: none;
   overscroll-behavior-x: none;
+}
+
+* {
+  box-sizing: border-box;
 }
