refactor: use a mono font

--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,7 @@
 
 :root,
 textarea {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Roboto MonoVariable", monospace;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
